python/test-data/testTraceback2.err

  File "test-data/testTraceback2.py", line 3
    lst = [1,2,3
               ^
SyntaxError: unexpected EOF while parsing
